--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,29 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="root">
+    
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <script src="../src/js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="../src/js/popper.min.js"></script>
+    <script src="../src/js/bootstrap.min.js"></script>
+    <script src="../src/js/isotope.pkgd.min.js"></script>
+    <script src="../src/js/slick.min.js"></script>
+    <script src="../src/js/jquery.meanmenu.min.js"></script>
+    <script src="../src/js/wow.min.js"></script>
+    <script src="../src/js/aos.js"></script>
+    <script src="../src/js/jquery.lettering.js"></script>
+    <script src="../src/js/jquery.textillate.js"></script>
+    <script src="../src/js/jquery.odometer.min.js"></script>
+    <script src="../src/js/jquery.appear.js"></script>
+    <script src="../src/js/owl.carousel.min.js"></script>
+    <script src="../src/js/jquery.countdown.min.js"></script>
+    <script src="../src/js/jquery.scrollUp.min.js"></script>
+    <script src="../src/js/imagesloaded.pkgd.min.js"></script>
+    <script src="../src/js/jquery.magnific-popup.min.js"></script>
+    <script src="../src/js/plugins.js"></script>
+    <script src="../src/js/main.js"></script>
+  </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
