--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-T5P6TM2W');</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -50,6 +56,14 @@
     <script src="../src/js/jquery.magnific-popup.min.js"></script>
     <script src="../src/js/plugins.js"></script>
     <script src="../src/js/main.js"></script>
+
+
+
+  
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5P6TM2W"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   </div>
 
   </body>
